Remove mobile touch pointer tracking logic
Removed mobile touch pointer tracking and related logic to simplify event handling.

--- a/index.html
+++ b/index.html
@@ -986,9 +986,6 @@ let __leftClickCandidate = false, __rightClickCandidate = false;
 	let targetW=1080, targetH=1920;
 	let panActive = false; // For preventing pivot updates during strafe
 
-	// MOBILE FIX: Track active touch pointers to know when all touches are released
-	const activeTouchPointers = new Set();
-
 	// --- Cinematic Path State ---
 	let isRecordingPath = false;
 	let cinematicPathCheckpoints = [];
@@ -3770,6 +3767,16 @@ canvas.addEventListener('pointermove', (e)=>{
   __feedVelocity(dx,dy, Math.max(1, now - (__lastMoveT||now)));
   __lastMoveT = now;
 }, true);
+// --- Mobile TOUCH safety valve: cancel all sticky modes on touch-down (no effect on desktop) ---
+canvas.addEventListener('pointerdown', (e) => {
+  if (e.pointerType === 'touch') {
+    try { if (typeof panActive !== 'undefined' && panActive && typeof endPan === 'function') endPan(false); } catch(_) {}
+    try { window.__orbitLatched = false; } catch(_) {}
+    try { rmbLatched = false; } catch(_) {}
+    try { rightDown = false; leftDown = false; hasDragged = false; rightHasDragged = false; } catch(_) {}
+    try { if (typeof controls !== 'undefined' && controls) controls.enabled = true; } catch(_) {}
+  }
+}, true);
 // Cancel on new input
 canvas.addEventListener('pointerdown', ()=>{ try{ __cancelInertia(); }catch(_){ } }, true);
 window.addEventListener('keydown', ()=>{ try{ __cancelInertia(); }catch(_){ } }, true);
@@ -4106,12 +4113,6 @@ window.addEventListener('keydown', ()=>{ try{ __cancelInertia(); }catch(_){ } },
 
 
 canvas.addEventListener('pointerdown', (e)=>{
-	// MOBILE FIX: Track touch pointers
-	if (e.pointerType === 'touch') {
-	  activeTouchPointers.add(e.pointerId);
-	  console.log('[mobile] Touch down, active pointers:', activeTouchPointers.size);
-	}
-	
 	const left = e.pointerType==='mouse' && e.button===0 && !e.shiftKey;
 	if (left){
 	  try{ if(e.pointerId!=null) canvas.setPointerCapture(e.pointerId); }catch(_){}
@@ -4284,43 +4285,26 @@ e.preventDefault();
   canvas.addEventListener('pointermove', onPointerMove, {passive:false, capture:true});
   // NEW: while latched (sticky-orbit) or during a pan, also listen at the window level
   window.addEventListener('pointermove', (e) => {
-    if (window.__orbitLatched || panActive) onPointerMove(e);
+    if (e.pointerType !== 'touch' && (window.__orbitLatched || panActive)) onPointerMove(e);
   }, {passive:false});
 
 
 
   // --- FIX: Patched pointerup listener to handle state transitions correctly ---
   // Around line 2085
+
 window.addEventListener('pointerup', (e) => {
+  // Mobile TOUCH guard: always end any custom pan/latched states and re-enable controls; don't run desktop sticky logic.
+  if (e.pointerType === 'touch') {
+    try { if (typeof panActive !== 'undefined' && panActive && typeof endPan === 'function') endPan(false); } catch(_) {}
+    try { window.__orbitLatched = false; } catch(_) {}
+    try { rmbLatched = false; } catch(_) {}
+    try { if (typeof controls !== 'undefined' && controls) controls.enabled = true; } catch(_) {}
+    try { orbitRotating = false; } catch(_) {}
+    return;
+  }
 	try { if (e.pointerId != null) canvas.releasePointerCapture(e.pointerId); } catch (_) {}
   
-	// MOBILE FIX: Handle touch events that the mouse-only handler below misses
-	if (e.pointerType === 'touch') {
-	  // Remove this pointer from active set
-	  activeTouchPointers.delete(e.pointerId);
-	  console.log('[mobile] Touch released, remaining pointers:', activeTouchPointers.size);
-	  
-	  // ONLY reset when ALL touches are released (no more active touch pointers)
-	  if (activeTouchPointers.size === 0) {
-		console.log('[mobile] All touches released, resetting controls');
-		
-		// Clear any stuck states
-		try { if (panActive) panActive = false; } catch(_) {}
-		try { if (window.__orbitLatched) window.__orbitLatched = false; } catch(_) {}
-		try { if (orbitRotating) orbitRotating = false; } catch(_) {}
-		try { if (cylRotating) cylRotating = false; } catch(_) {}
-		
-		// Force OrbitControls to reset its internal state
-		if (controls) {
-		  controls.enabled = true;
-		  // Update to ensure internal state is clean
-		  controls.update();
-		}
-	  }
-	  
-	  return; // Don't run the mouse handler below
-	}
-	
 	const left = e.pointerType === 'mouse' && e.button === 0 && !e.shiftKey;
   
 	if (left) {
@@ -4437,21 +4421,6 @@ window.addEventListener('pointerup', (e) => {
 	}
   });
 
-// MOBILE FIX: Handle pointercancel (e.g., when system interrupts touch)
-window.addEventListener('pointercancel', (e) => {
-  if (e.pointerType === 'touch') {
-	activeTouchPointers.delete(e.pointerId);
-	console.log('[mobile] Touch cancelled, remaining pointers:', activeTouchPointers.size);
-	
-	// If all touches cancelled, reset controls
-	if (activeTouchPointers.size === 0 && controls) {
-	  console.log('[mobile] All touches cancelled, resetting controls');
-	  controls.enabled = true;
-	  controls.update();
-	}
-  }
-});
-
 function __lockPointerIfNeeded(){
 	if (!INFINITE_DRAG) return;
 	if (document.pointerLockElement !== canvas){
@@ -4512,7 +4481,17 @@ function __lockPointerIfNeeded(){
 
   // Capture-phase blocker: if sequence didn't start on canvas, block downstream window pointerup handlers
   // EXCEPTION: Always allow pointerup if a sticky mode is active so user can release it anywhere
-  window.addEventListener('pointerup', (e)=>{
+  
+window.addEventListener('pointerup', (e) => {
+  // Mobile TOUCH guard: always end any custom pan/latched states and re-enable controls; don't run desktop sticky logic.
+  if (e.pointerType === 'touch') {
+    try { if (typeof panActive !== 'undefined' && panActive && typeof endPan === 'function') endPan(false); } catch(_) {}
+    try { window.__orbitLatched = false; } catch(_) {}
+    try { rmbLatched = false; } catch(_) {}
+    try { if (typeof controls !== 'undefined' && controls) controls.enabled = true; } catch(_) {}
+    try { orbitRotating = false; } catch(_) {}
+    return;
+  }
 	if (e.button !== 0) return;
 	const samePointer = (__seqPointerId === null) || (e.pointerId === __seqPointerId);
 	
@@ -7125,3 +7104,15 @@ console.log('[DIMS] Script loading...');
  // console.log('[quick] collapsibles active');
 })();
 </script>
+
+
+// /* MOBILE sticky kill-switch */ keep all sticky features off on touch devices (no effect on desktop)
+(function(){
+  const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+  if (!isMobile) return;
+  setInterval(() => {
+    try { if (window.__orbitLatched) window.__orbitLatched = false; } catch(_) {}
+    try { if (typeof rmbLatched !== 'undefined' && rmbLatched) rmbLatched = false; } catch(_) {}
+    try { if (typeof controls !== 'undefined' && controls && controls.enabled === false) controls.enabled = true; } catch(_) {}
+  }, 200);
+})();
